--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,6 @@ android {
         disable 'MissingTranslation'
         abortOnError false
     }
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -53,7 +50,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.3.2'
     implementation "com.google.android.material:material:1.1.0"
 
-    androidTestImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support:support-annotations:28.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
 
