--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="it.niedermann.owncloud.notes">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +15,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:targetApi="n">
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.SplashscreenActivity"
@@ -45,18 +47,21 @@
         </activity>
 
         <activity
+            android:name="it.niedermann.owncloud.notes.android.activity.ExceptionActivity"
+            android:label="@string/app_name" />
+
+        <activity
             android:name="it.niedermann.owncloud.notes.android.activity.PreferencesActivity"
             android:label="@string/action_settings"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
-            android:windowSoftInputMode="stateHidden"
-            />
+            android:windowSoftInputMode="stateHidden" />
 
         <activity
             android:name="it.niedermann.owncloud.notes.android.activity.EditNoteActivity"
             android:label="@string/simple_edit"
+            android:launchMode="singleTask"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:launchMode="singleTask">
+            android:windowSoftInputMode="stateHidden">
             <intent-filter android:label="@string/action_create">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -64,13 +69,14 @@
             </intent-filter>
             <!-- Voice command "note to self" in google search -->
             <intent-filter android:label="@string/action_create">
-                <action android:name="com.google.android.gm.action.AUTO_SEND"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
+                <action android:name="com.google.android.gm.action.AUTO_SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
             </intent-filter>
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:scheme="content" />
                 <data android:host="*" />
                 <data android:mimeType="text/*" />
@@ -82,8 +88,7 @@
             android:label="@string/simple_about"
             android:parentActivityName="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity" />
 
-        <activity
-            android:name=".android.activity.SelectSingleNoteActivity">
+        <activity android:name=".android.activity.SelectSingleNoteActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
@@ -145,9 +150,9 @@
 
         <service
             android:name="it.niedermann.owncloud.notes.android.quicksettings.NewNoteTileService"
+            android:description="@string/action_create"
             android:icon="@drawable/ic_quicksettings_new"
             android:label="@string/action_create"
-            android:description="@string/action_create"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
