--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3.11.0
+        with:
+          distribution: "temurin"
+          java-version: 17
       - name: Lint
         run: bash ./gradlew lintDevDebug --stacktrace
 
@@ -33,6 +38,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3.11.0
+        with:
+          distribution: "temurin"
+          java-version: 17
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
 
@@ -42,6 +52,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v3.11.0
+        with:
+          distribution: "temurin"
+          java-version: 17
       - name: Build debug APK
         run: bash ./gradlew assembleDev --stacktrace
       - name: Upload APK
