--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,12 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 
     // Nextcloud SSO
-    implementation 'com.github.nextcloud.android-common:ui:0.10.0'
+    implementation 'com.github.nextcloud.android-common:ui:0.12.0'
     implementation 'com.github.nextcloud:Android-SingleSignOn:0.8.1'
     implementation 'com.github.stefan-niedermann:android-commons:0.2.9'
     implementation "com.github.stefan-niedermann.nextcloud-commons:sso-glide:$commonsVersion"
     implementation "com.github.stefan-niedermann.nextcloud-commons:exception:$commonsVersion"
-    implementation("com.github.stefan-niedermann.nextcloud-commons:markdown:$commonsVersion") {
+    implementation("com.github.jackduckworth.nextcloud-commons:markdown:v1.8.3") {
         exclude group: 'org.jetbrains', module: 'annotations-java5'
     }
 
