--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,12 @@
+/*
+ * Nextcloud Notes - Android Client
+ *
+ * SPDX-FileCopyrightText: 2015-2024 Nextcloud GmbH and Nextcloud contributors
+ * SPDX-FileCopyrightText: 2015-2024 Stefan Niedermann <info@niedermann.it>
+ * SPDX-FileCopyrightText: 2020 Hui-Ouyang16 <11710106@mail.sustech.edu.cn>
+ * SPDX-License-Identifier: GPL-3.0-or-later
+ */
+
 apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
