--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 buildscript {
     ext {
         kotlinVersion = '1.9.23'
-        commonsVersion = '2.1.0'
+        commonsVersion = '1ed158ba44'
     }
     repositories {
         mavenCentral()
